<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dllo.yoho.MainActivity">

    <!--主界面-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/main_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_radiogroup_height"
            android:background="@color/main_radiogroup"
            android:orientation="horizontal">

            //推荐

            <RadioButton
                android:id="@+id/main_recommend"
                style="@style/radiobutton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/padding"
                android:layout_weight="1"
                android:checked="true"
                android:drawableTop="@drawable/selected_recommend"
                android:gravity="center"
                android:text="@string/recommend_name"
                android:textColor="@color/radiobutton_textcolor" />

            //栏目

            <RadioButton
                android:id="@+id/main_column"
                style="@style/radiobutton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/padding"
                android:layout_weight="1"
                android:drawableTop="@drawable/selected_column"
                android:gravity="center"
                android:text="@string/column_name"
                android:textColor="@color/radiobutton_textcolor" />

            //社区

            <RadioButton
                android:id="@+id/main_community"
                style="@style/radiobutton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/padding"
                android:layout_weight="1"
                android:drawableTop="@drawable/selected_community"
                android:gravity="center"
                android:text="@string/community_name"
                android:textColor="@color/radiobutton_textcolor" />

            //视频

            <RadioButton
                android:id="@+id/main_video"
                style="@style/radiobutton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/padding"
                android:layout_weight="1"
                android:drawableTop="@drawable/selected_video"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/video_name"
                android:textColor="@color/radiobutton_textcolor" />

            //杂志

            <RadioButton
                android:id="@+id/main_magazine"
                style="@style/radiobutton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/selected_magazine"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/magazine_name"
                android:textColor="@color/radiobutton_textcolor" />
        </RadioGroup>
    </LinearLayout>

    <!--抽屉-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="#000">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/default_head"
                android:id="@+id/main_logon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="登录"
                android:textColor="#fff"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="我的收藏"
                android:textColor="#fff"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="我的杂志"
                android:textColor="#fff"
                android:textSize="20dp"
                android:id="@+id/drawer_magazine"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="我的提问"
                android:textColor="#fff"
                android:textSize="20dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/menu_feedback" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="意见反馈"
                    android:textColor="#fff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/menu_comment" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="给我评价"
                    android:textColor="#fff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/menu_setting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="设置"
                    android:textColor="#fff" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</android.support.v4.widget.DrawerLayout>
